--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "firebase": "^12.7.0",
+    "framer-motion": "^12.23.26",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "next-themes": "^0.4.6",
+    "qrcode.react": "^4.2.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.69.0",
